2012-11-23  Zeno Albisser  <zeno@webkit.org>

        [Qt] GraphicsContext3DQt should not overwrite glClearColor of sharing context.
        https://bugs.webkit.org/show_bug.cgi?id=103135

        In case we use GraphicsContext3DQt to render into or
        read from an existing context, we should not reset
        the glClearColor on construction.
        Otherwise we might overwrite an existing definition from
        the sharing context.

        Reviewed by Kenneth Rohde Christiansen.

        * platform/graphics/qt/GraphicsContext3DQt.cpp:
        (WebCore::GraphicsContext3D::GraphicsContext3D):

2012-11-23  Pavel Feldman  <pfeldman@chromium.org>

        Web Inspector: damaging last chunk does not remove its garbage from DOM
        https://bugs.webkit.org/show_bug.cgi?id=103132

        Reviewed by Vsevolod Vlasov.

        Removing everything between undamaged chunks, not registered chunk rows.

        * inspector/front-end/DefaultTextEditor.js:
        (WebInspector.TextEditorMainPanel.prototype._insertSpanBefore):
        (WebInspector.TextEditorMainPanel.prototype._updateChunksForRanges):
        (WebInspector.TextEditorMainChunk.prototype.updateCollapsedLineRow):
        (WebInspector.TextEditorMainChunk.prototype.firstElement):
        (WebInspector.TextEditorMainChunk.prototype.lastElement):

2012-11-23  Ilya Tikhonovsky  <loislo@chromium.org>

        RenderLayer minor clean-up: replace raw pointers with OwnPtrs.
        https://bugs.webkit.org/show_bug.cgi?id=103134

        Reviewed by Eric Seidel.

        I found that RenderLayer still uses raw pointers to the objects which it owns.
        Looks like these pointers could be replaced with OwnPtrs.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::RenderLayer):
        (WebCore::RenderLayer::~RenderLayer):
        (WebCore::RenderLayer::paintLayerContents):
        (WebCore::RenderLayer::hitTestLayer):
        (WebCore::RenderLayer::updateNormalFlowList):