@@ -1,3 +1,13 @@
+2012-11-23  Alexei Filippov  <alph@chromium.org>
+
+        Web Inspector: remove total item from NMI snapshot grid
+        https://bugs.webkit.org/show_bug.cgi?id=101926
+
+        Reviewed by Yury Semikhatsky.
+
+        * inspector/front-end/NativeMemorySnapshotView.js:
+        (WebInspector.NativeSnapshotDataGrid):
+
 2012-11-23  Zeno Albisser  <zeno@webkit.org>
 
         [Qt] GraphicsContext3DQt should not overwrite glClearColor of sharing context.
